k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amconsole-app
  namespace: amconsole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amconsole
  template:
    metadata:
      labels:
        app: amconsole
    spec:
      containers:
      - name: amconsole
        image: wasilahhadi/amconsole:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "64Mi"
            cpu: "50m"
