k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amconsole
  namespace: amconsole
spec:
  selector:
    app: amconsole
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
